# fair_groups

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
data/: folktables_income_data.py  synthetic_data.py
examples/: example.ipynb  example_synthetic_data.ipynb
fair_grouping/: fairness_metrics.py  partition_estimation.py  visualization.py
fair_groups/: __init__.py  fairness_metrics.py  partition_estimation.py  visualization.py
fair_partition/: __init__.py  fairness_metrics.py  partition_estimation.py
fair_segmentation/: fairness_metrics.py  visualization.py
fairness_metrics/: fairness_metrics.py  utils.py
fairness_metrics/.ipynb_checkpoints/: fairness_metrics_supplementary-checkpoint.py  fairness_metrics_visualization-checkpoint.py
notebooks/: example.ipynb  example_partitions_celeba.ipynb  example_partitions_synthetic_data.ipynb  example_synthetic_data.ipynb
notebooks/.ipynb_checkpoints/: example_adult-checkpoint.ipynb
partitions/: fairness_metrics.py  fairseg.py
