[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fair-partition"
version = "0.1.1"
description = "A Python package for fair partitioning algorithms"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Veronika Shilova", email = "veronika.shilova@artefact.com" }
]
dependencies = [
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "tqdm>=4.65.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["fair_partition"]
python-versions = ["3.9"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py39" 